--- a/Flask-site/requirements.txt
+++ b/Flask-site/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.9.9
 blinker==1.4
 chardet==3.0.4
 click==6.7
+dash
 Flask==1.0.2
 Flask-Dance==0.14.0
 Flask-DebugToolbar==0.10.1
@@ -20,6 +21,8 @@ Mako==1.0.7
 MarkupSafe==1.1.1
 oauth2==1.9.0.post1
 oauthlib==2.0.7
+pandas
+plotly
 python-dateutil==2.7.2
 python-editor==1.0.3
 requests==2.18.4
