--- a/Instagram_clone/package.json
+++ b/Instagram_clone/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/rileydlynch/Mock-projects/tree/main#readme",
   "dependencies": {
     "axios": "^0.21.4",
+    "bcrypt": "^5.0.1",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "JSON": "^1.0.0",
     "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "xml2js": "^0.4.23"
